
	* reportio.c [_WIN32]: fix redefinition of lseek

2018-04-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_init): fix definition of alt keys
	  when function keys have negative values

2018-04-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_getopt_long_long): fixed free of changed pointer
	* common.c (cob_gettmpdir): check if environment variables for TEMP
	  points to usable directory before using it (fallback to ".")
	* common.c (cob_init_nomain) [HAVE_READLINK]: fixed strcpy of
	  unterminated return from (readlink)
	* common.c, reportio.c, termio.c: changed occurrences of strcpy
	  to strncpy to prevent possible buffer overflows
	* common.h: moved definition of COB_MAX_SUBSCRIPTS from cobc/tree.h
	* termio.c (cob_dump_field): allow longer field names and
	  number/high values of subscripts
	* initrinsic.c (numval, cob_intr_locale_compare): fixed missing free
	  in cases of input errors
	* fileio (cob_fd_file_open): directly set f->fd after open to prevent
	  possible ressource leaks with file status != 0
	* fileio (cob_file_free): check pointer before dereferencing it

2018-04-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_init): escape backslash in key definitions

2018-03-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (set_cob_time_from_local_time): new function called on
	  all systems, including code for computing UTC offset (with correct
	  sign)
	* common.c (cob_get_current_date_and_time) [_WIN32]: no longer need
	  to force of date re-calculation as we always use localtime now

2018-03-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_display): added missing handling of cob_unix_lf
	* common.c (set_cob_time_offset): recreated for use on all systems,
	  moved code for computation of UTC there, including adjustment by
	  daylight saving time (which was missing from _WIN32 until now),